Fix overflow-x issue when using the editor.

--- a/assets/css/json_editor.css
+++ b/assets/css/json_editor.css
@@ -105,3 +105,7 @@ select.add-node {
 button.add-node {
     margin-left: 1vh;
 }
+
+.setup-step {
+    overflow-x: hidden;
+}
